# bracketology.hs

./: default.nix
backend/: backend.cabal
backend/src/: Backend.hs
backend/src/Backend/: Config.hs  Database.hs  Errors.hs  Ingestion.hs  Monad.hs  Validation.hs
backend/src/Backend/Database/: Matchups.hs  Performances.hs  Players.hs  Teams.hs
backend/src/Backend/Database/Matchups/: Matchup.hs
backend/src/Backend/Database/Performances/: Performance.hs
backend/src/Backend/Database/Players/: Player.hs
backend/src/Backend/Database/Teams/: Team.hs
common/: common.cabal
common/src/Common/: Api.hs  Bracket.hs  Logging.hs  Probability.hs  Route.hs  Simulation.hs
common/src/Common/Api/: Teams.hs
common/src/Common/Api/Matchups/: Matchup.hs
common/src/Common/Api/Performances/: Performance.hs
common/src/Common/Api/Players/: Player.hs
common/src/Common/Api/Teams/: Team.hs  TeamObject.hs  TeamRankings.hs
common/src/Common/Simulation/: Details.hs
common/src/Common/Statistics/: Defensive.hs  Offensive.hs  Player.hs  Util.hs
config/backend/: jwtKey  pgConnStr
dep/echarts-jsdom/: git.json
dep/html-parse/: git.json
dep/monad-alter/: git.json
dep/reflex-dom-echarts/: git.json
dep/servant-reflex/: git.json
dep/servant-snap/: git.json  update.sh
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: Chart.hs  Client.hs  Head.hs  HomePage.hs  Matchup.hs  Nav.hs  Player.hs  Search.hs  Team.hs  TeamPreview.hs
static/: main.css
